--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <i id="closeBtn" class="fas fa-chevron-left"></i>
         </header>
         <form id="todo-form">
-          <input required type="text" placeholder=" WRITE TO DO :)" />
+          <input required type="text" maxlength="25" placeholder=" WRITE TO DO :)" />
         </form>
         <ul id="todo-list"></ul>
       </section>
